--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,58 @@
+* {
+  font-family: 'Montserrat', sans-serif;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+  background-color: white;
+  padding-left: 270px;
 }
 
 .App-intro {
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.logoView {
+  background-color: #2A3E61;
+  text-align: center;
+  font-weight: 800;
+  font-size: 24px;
+  color: #A9B3BF;
+  padding-top: 15px;
+  height: 80px;
+  margin-bottom: 20px;
+}
+
+.side-nav {
+  background-color: #19283F; 
+}
+
+.side-nav a {
+  font-size: 18px;
+}
+
+.side-nav.fixed a {
+  color: #586F8F;
+  text-align: center;
+}
+
+.side-nav.fixed a:hover {
+  color: white;
+}
+
+nav ul a{
+  color: #C2CAD5;
+}
+
+.wrapper {
+  margin: 20px;
+}
+
+.inventory h4, .inventory th {
+  color: #586F8F;
+}
+
+.inventory .btn-floating {
+  position: absolute;
+  right: 40px;
+  background-color: #2A3E61;
 }
